--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,26 @@
 {
-  "exclude": [
-    "node_modules"
-  ],
+  "compilerOptions": {
+    "declaration": true,
+    "noResolve": false,
+    "jsx": "react",
+    "module": "commonjs",
+    "target": "es5",
+    "experimentalDecorators": true,
+    "noImplicitAny": false,
+    "outDir": "dist/",
+    "lib": [
+      "es5",
+      "dom"
+    ]
+  },
   "typeAcquisition": {
     "enable": true
   },
   "include": [
     "./src/**/*"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
   ]
 }
