--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,8 +4,11 @@
     "version": "0.1.0",
     "command": "tsc",
     "isShellCommand": true,
-    "args": ["-w", "-p", "."],
+    "args": [
+        "-p",
+        "."
+    ],
     "showOutput": "silent",
     "isBackground": true,
-    "problemMatcher": "$tsc-watch"
+    "problemMatcher": "$tsc"
 }
