Add types, typeRoots values

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "lib": [
       "es5",
       "dom"
+    ],
+    "types": [
+      "react"
+    ],
+    "typeRoots": [
+      "./typings"
     ]
   },
   "typeAcquisition": {
