Fix missing 'spinner' during build

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,6 @@
         "."
     ],
     "showOutput": "silent",
-    "isBackground": true,
+    "isBackground": false,
     "problemMatcher": "$tsc"
 }
